// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should take options 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\^\\.\\*\\\\\\.styl\\$/,
        "use": Array [
          Object {
            "loader": "extract-loader",
            "options": Object {},
          },
          Object {
            "loader": "css-loader",
            "options": Object {},
          },
          Object {
            "loader": "stylus-loader",
            "options": Object {
              "compress": false,
              "disable-cache": true,
              "preferPathResolver": "webpack",
            },
          },
        ],
      },
    ],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".json",
    ],
  },
  "stats": Object {
    "children": false,
    "chunks": false,
    "modules": false,
    "reasons": false,
  },
}
`;

exports[`should work with file block 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\^\\.\\*\\\\\\.styl\\$/,
        "use": Array [
          Object {
            "loader": "file-loader",
            "options": Object {},
          },
          Object {
            "loader": "extract-loader",
            "options": Object {},
          },
          Object {
            "loader": "css-loader",
            "options": Object {},
          },
          Object {
            "loader": "stylus-loader",
            "options": Object {
              "compress": true,
              "disable-cache": true,
              "preferPathResolver": "webpack",
            },
          },
        ],
      },
    ],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".json",
    ],
  },
  "stats": Object {
    "children": false,
    "chunks": false,
    "modules": false,
    "reasons": false,
  },
}
`;

exports[`should work with match() 1`] = `
Object {
  "module": Object {
    "rules": Array [
      Object {
        "test": /\\^\\.\\*\\\\\\.styl\\$/,
        "use": Array [
          Object {
            "loader": "extract-loader",
            "options": Object {},
          },
          Object {
            "loader": "css-loader",
            "options": Object {},
          },
          Object {
            "loader": "stylus-loader",
            "options": Object {
              "compress": true,
              "disable-cache": true,
              "preferPathResolver": "webpack",
            },
          },
        ],
      },
    ],
  },
  "plugins": Array [],
  "resolve": Object {
    "extensions": Array [
      ".js",
      ".json",
    ],
  },
  "stats": Object {
    "children": false,
    "chunks": false,
    "modules": false,
    "reasons": false,
  },
}
`;
